# UAV-Auto-landing

./: README.md  UAVTakeoff.cpp  camera.cpp  fc1.cpp  fsm.cpp  iris_with_aruco.sdf  straight_trj.cpp  uav_trj_method1.cpp
Aruco/: Aruco.cpp  common.h  kinetic_math.hpp  uav_trj.cpp
Aruco/src/: kinetic_math.hpp  movement.h
Gazebo_model/iris_aruco_vertical/: iris_aruco_vertical.sdf  model.config
Gazebo_model/simple_bot/: CMakeLists.txt  package.xml
Gazebo_model/simple_bot/launch/: amcl.launch  empty_world.launch  robot_description.launch  spawn_udacity_bot.launch  udacity_world.launch
Gazebo_model/simple_bot/urdf/: rgb_camera.gazebo
Gazebo_model/visual_marker/: model.config  model.sdf
Gazebo_model/visual_marker/materials/scripts/: visual_marker.material
Kalman_filter/: KF.cpp
UAV_autoland_system/: CMakeLists.txt
UAV_autoland_system/src/: Camera.cpp  aruco detection.h  record.cpp  uav_trj_method1.cpp  uav_trj_method2.cpp
UAV_autoland_system/src/uav_autoland/: package.xml
scout/scout_description/: model.config
sim_ws/E2ES/: CMakeLists.txt  sim.sh
sim_ws/E2ES/gazebo/models/iris_aruco/: iris_aruco.sdf  model.config
sim_ws/E2ES/gazebo/models/iris_aruco_plate/: iris_aruco.sdf  iris_aruco_plate.sdf  iris_aruco_plate2.sdf  model.config
sim_ws/E2ES/gazebo/models/iris_aruco_vertical/: iris_aruco_vertical.sdf  model.config
sim_ws/E2ES/gazebo/models/kinect/: model.sdf
sim_ws/E2ES/gazebo/worlds/: empty.world
sim_ws/E2ES/launch/: iris_d435_indoor.launch
uav_control/: CMakeLists.txt
uav_control/src/: UAVSpiralMotion.cpp  UAVTakeoff.cpp
uav_control/yaml/: waypoint_points.yaml
visual_marker_small/: model.sdf
visual_marker_small/materials/scripts/: visual_marker.material
(+2 files in other folders)
